# Level-Set-Segmentation

./: CMakeLists.txt  commons.hpp  kernels.cl  levelSet.cpp  levelSet.hpp  main.cpp
CMake/: Level-Set-SegmentationConfig.cmake.in  Level-Set-SegmentationUse.cmake  level-set-segmentation-config.h.in  lsInitializeLibraries.cmake
